--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>sys</title>
+    <style>
+      html, body, #app {
+        height: 100%;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
