完成视频和eslint

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>智能头盔后台控制系统</title>
+    <link href="http://vjs.zencdn.net/5.5.3/video-js.css" rel="stylesheet">
     <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.4.6&key=d0158ecea85c57072ee50572c3d30ea1"></script>
     <script src="/static/js/sockjs.min.js"></script>
     <style>
@@ -17,6 +18,12 @@
       }
       p {
         margin: 0;
+      }
+      .vjs-big-play-button {
+        top: inherit!important;
+        left: inherit!important;
+        bottom: 10px;
+        right: 10px;
       }
     </style>
     <script>
@@ -38,4 +45,5 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <script src="http://vjs.zencdn.net/5.5.3/video.js"></script>
 </html>
