--- a/index.html
+++ b/index.html
@@ -45,5 +45,5 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
-  <script src="http://vjs.zencdn.net/5.5.3/video.js"></script>
+  <!-- <script src="http://vjs.zencdn.net/5.5.3/video.js"></script> -->
 </html>
